# pelotourney

./: .gitignore  LICENSE  Procfile  manage.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
pelotourney/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
pelotourney/templates/: index.html
tournaments/: apps.py  models.py  tests.py  urls.py  views.py
tournaments/fixtures/: sample-tournament.json
tournaments/migrations/: 0001_initial.py  0002_alter_tournamentmember_team.py  0003_add_uid_field.py
tournaments/templates/: base.html
tournaments/templates/registration/: login.html
tournaments/templates/tournaments/: authorize.html  detail.html  edit-form.html  edit.html  index.html  new.html
tournaments/templates/tournaments/components/: edit-form.html  team-list.html  team-list.js  team-members.html  team.html
tournaments/templates/tournaments/settings/: permissions.html  rides.html  settings.html  teams.html
tournaments/templatetags/: tournament_extras.py
